trunk/Archive2/40/0fc0d0c86088ae/output
main.cpp: In function 'int main()':
main.cpp:38:6: error: expected '}' before ';' token
     };
      ^
main.cpp:38:6: error: could not convert '{{1, {"foo", "rf"}, {3, "bar", "rf"}, {2, "baz", "rf"}}}' from '<brace-enclosed initializer list>' to 'std::unordered_map<long int, Key>'
